--- a/pages/components/cropper/cropper.module.css
+++ b/pages/components/cropper/cropper.module.css
@@ -46,9 +46,35 @@
   transform: translateY(1px);
 }
 
+.cropperContainer__wrapper {
+  width: 100%;
+  max-width: 400px;
+  max-height: 400px;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+.cropperContainer__wrapper::-webkit-scrollbar {
+  width: 10px; /* Ширина полосы прокрутки */
+}
+
+.cropperContainer__wrapper::-webkit-scrollbar-track {
+  background: #f1f1f1; /* Цвет фона трека прокрутки */
+  border-radius: 8px;
+}
+
+.cropperContainer__wrapper::-webkit-scrollbar-thumb {
+  background-color: #888; /* Цвет ползунка прокрутки */
+  border-radius: 8px;
+  border: 2px solid #ddd; /* Обводка ползунка прокрутки */
+}
+
+.cropperContainer__wrapper::-webkit-scrollbar-thumb:hover {
+  background-color: #555; /* Цвет ползунка при наведении */
+}
+
 .cropperContainer__croppedImage {
   width: 100%;
-  max-width: 100%;
   height: auto;
   border-radius: 8px;
   border: 2px solid #ddd;
